// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleCard component applies background image styles when backgroundImage is provided 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-100 rounded-24 tablet:rounded-32 desktop:rounded-40 w-full bg-cover bg-center custom-class"
    data-testid="simple-card-test-id"
    style="background-image: url(/test-image.jpg);"
  >
    <p>
      Test Content
    </p>
  </div>
</DocumentFragment>
`;

exports[`SimpleCard component applies correct className and backgroundColor 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-100 rounded-24 tablet:rounded-32 desktop:rounded-40 w-full bg-cover bg-center custom-class"
    data-testid="simple-card-test-id"
  >
    <p>
      Test Content
    </p>
  </div>
</DocumentFragment>
`;

exports[`SimpleCard component renders children inside the card 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-100 rounded-24 tablet:rounded-32 desktop:rounded-40 w-full bg-cover bg-center custom-class"
    data-testid="simple-card-test-id"
  >
    <p>
      Test Content
    </p>
  </div>
</DocumentFragment>
`;

exports[`SimpleCard component renders the SimpleCard component 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-100 rounded-24 tablet:rounded-32 desktop:rounded-40 w-full bg-cover bg-center custom-class"
    data-testid="simple-card-test-id"
  >
    <p>
      Test Content
    </p>
  </div>
</DocumentFragment>
`;
